exclude gar from filtering
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>